<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        app:key="location_search_city"
        app:title="@string/pref_title_search_city" >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.djalel.android.bilal"
            android:targetClass="com.djalel.android.bilal.activities.SearchCityActivity"/>
    </Preference>

    <ListPreference
        app:key="location_method"
        app:title="@string/pref_title_method"
        app:defaultValue="10"
        app:entries="@array/pref_method_list_titles"
        app:entryValues="@array/pref_method_list_values"
        app:negativeButtonText="@null"
        app:positiveButtonText="@null"
        app:useSimpleSummaryProvider="true"/>

    <SwitchPreference
        app:key="location_mathhab_hanafi"
        app:title="@string/pref_title_mathhab_hanafi"
        app:summary="@string/pref_description_mathhab_hanafi"
        app:defaultValue="false" />

</PreferenceScreen>
