<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="pref_search_city"
        android:title="@string/pref_title_search_city"
        android:summary="@string/pref_undefined_city" >
        <intent android:action="android.intent.action.VIEW"
            android:targetPackage="org.linuxac.bilal"
            android:targetClass="org.linuxac.bilal.activities.SearchCityActivity"/>
    </Preference>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="pref_calc_method"
        android:title="@string/pref_title_method"
        android:defaultValue="5"
        android:entries="@array/pref_method_list_titles"
        android:entryValues="@array/pref_method_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <SwitchPreference
        android:key="pref_calc_round"
        android:title="@string/pref_title_round"
        android:defaultValue="true" />

</PreferenceScreen>
