<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    <SwitchPreference
        android:key="example_switch"
        android:title="@string/pref_title_social_recommendations"
        android:summary="@string/pref_description_social_recommendations"
        android:defaultValue="true" />
     -->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--
    <EditTextPreference
        android:key="example_text"
        android:title="@string/pref_title_display_name"
        android:defaultValue="@string/pref_default_display_name"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />
     -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="general_language"
        android:title="@string/pref_title_language"
        android:defaultValue="@string/pref_language_default_value"
        android:entries="@array/pref_language_list_titles"
        android:entryValues="@array/pref_language_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <ListPreference
        android:key="general_numerals"
        android:title="@string/pref_title_numerals"
        android:defaultValue="@string/pref_numerals_default_value"
        android:entries="@array/pref_numerals_list_titles"
        android:entryValues="@array/pref_numerals_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <SwitchPreference
        android:key="general_rounding"
        android:title="@string/pref_title_round"
        android:defaultValue="true" />

    <Preference
        android:key="general_about"
        android:persistent="false"
        android:title="@string/pref_title_about">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.djalel.android.bilal"
            android:targetClass="com.djalel.android.bilal.activities.AboutActivity" />
    </Preference>

</PreferenceScreen>
