<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:key="notifications_prayer_time"
        android:title="@string/pref_title_prayer_time"
        android:defaultValue="true" />

    <SwitchPreference
        android:dependency="notifications_prayer_time"
        android:key="notifications_athan"
        android:title="@string/pref_title_athan"
        android:defaultValue="true" />


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:dependency="notifications_athan"
        android:key="notifications_muezzin"
        android:title="@string/pref_title_muezzin"
        android:defaultValue="ABDELBASET"
        android:entries="@array/pref_muezzin_list_titles"
        android:entryValues="@array/pref_muezzin_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:dependency="notifications_prayer_time"
        android:key="notifications_vibrate"
        android:title="@string/pref_title_vibrate"
        android:defaultValue="true" />

</PreferenceScreen>
